--- a/hello/Makefile
+++ b/hello/Makefile
@@ -1,4 +1,4 @@
-.PHONY: build clean run
+.PHONY: build clean run test
 
 build: src/main.rs
 	cargo build
@@ -8,3 +8,6 @@ clean:
 
 run:
 	cargo run --quiet
+
+test:
+	cargo test
