--- a/hello/Makefile
+++ b/hello/Makefile
@@ -1,5 +1,7 @@
 .PHONY: build clean run test
 
+BIN := hello
+
 build: src/main.rs
 	cargo build
 
@@ -7,7 +9,7 @@ clean:
 	rm -rf hello
 
 run:
-	cargo run --quiet
+	cargo run --quiet --bin $(BIN)
 
 test:
 	cargo test
