fix Makefile and new Makefile

--- a/hello/Makefile
+++ b/hello/Makefile
@@ -2,14 +2,25 @@
 
 BIN := hello
 
-build: src/main.rs
-	cargo build
+build: \
+	target/debug/hello \
+	target/debug/true \
+	target/debug/false
 
 clean:
-	rm -rf hello
+	rm -rf target
 
 run:
 	cargo run --quiet --bin $(BIN)
 
 test:
 	cargo test
+
+target/debug/hello: src/main.rs
+	cargo build
+
+target/debug/true: src/bin/true.rs
+	cargo build
+
+target/debug/false: src/bin/false.rs
+	cargo build
