--- a/catr/Cargo.toml
+++ b/catr/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+
+[dev-dependencies]
+assert_cmd = "2.0.16"
+predicates = "3.1.3"
+rand = "0.8.5"
