--- a/catr/Cargo.toml
+++ b/catr/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 clap = "4.5.23"
 
 [dev-dependencies]
+anyhow = "1.0.95"
 assert_cmd = "2.0.16"
 predicates = "3.1.3"
 rand = "0.8.5"
