--- a/headr/Cargo.toml
+++ b/headr/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 [dependencies]
 
 [dev-dependencies]
+anyhow = "1.0.95"
 assert_cmd = "2.0.16"
 predicates = "3.1.3"
+pretty_assertions = "1.4.1"
 rand = "0.8.5"
