--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,7 +19,7 @@ jobs:
     defaults:
       run:
         shell: bash --noprofile --norc -eo pipefail {0}
-        working-directory: ${{ matrix.working-directory }}
+        # working-directory: ${{ matrix.working-directory }}
     steps:
       - uses: actions/checkout@v4
       - run: rustup update --no-self-update stable
@@ -29,5 +29,6 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           key: stable
-      - run: cargo build --quiet
-      - run: cargo test -- --nocapture --quiet
+      - run: echo ${{ matrix.working-directory }}
+      # - run: cargo build --quiet
+      # - run: cargo test -- --nocapture --quiet
