--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
     defaults:
       run:
         shell: bash --noprofile --norc -eo pipefail {0}
-        working-directory: ${{ matrix.working-directory }}
+        working-directory: ${{ matrix.working_directory }}
     steps:
       - uses: actions/checkout@v4
       - run: rustup update --no-self-update stable
