--- a/wcr/Cargo.toml
+++ b/wcr/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+clap = "4.5.23"
+
+[dev-dependencies]
+anyhow = "1.0.95"
+pretty_assertions = "1.4.1"
+rand = "0.8.5"
